Creado mediante Colaboratory

--- a/Actividad 1.ipynb
+++ b/Actividad 1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNceUVnGpk6QV7I1zsqbKID",
+      "authorship_tag": "ABX9TyM6LA9we5rD+DgtdBTuGFBP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,16 +38,17 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Hola mundo\")"
+        "print(\"Hola\", end=\"\")\n",
+        "print(\" mundo\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TfB3ZBP9MPMk",
-        "outputId": "45793f66-dcfd-4fd1-c7af-64aa124e07ac"
+        "outputId": "85e90840-f537-4bca-dae2-0c7d4ce8d7fd"
       },
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
