--- a/Actidad_9.ipynb
+++ b/Actidad_9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNy/rjJKF8wSB9O73o2kref",
+      "authorship_tag": "ABX9TyMkKia2EIMjzPuTjeMF8PFa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,22 @@
         "id": "NdaVxKfYooIh"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def es_numero(cadena):\n",
+        "    try:\n",
+        "        float(cadena)\n",
+        "        return True\n",
+        "    except ValueError:\n",
+        "        return False"
+      ],
+      "metadata": {
+        "id": "FMaCXQ9bGHUm"
+      },
+      "execution_count": 145,
       "outputs": []
     },
     {
@@ -94,10 +110,10 @@
         "    print(\"2. Imprimir Diccionario\")\n",
         "    print(\"0. Salir\")\n",
         "\n",
-        "    opc = input(\"Digite una opcion: \")\n",
+        "    es_numero = input(\"Digite una opcion: \")\n",
         "    print(\"\\n\")\n",
         "\n",
-        "    if opc == '1':\n",
+        "    if es_numero == '1':\n",
         "        matricula = random.randint(30000, 39999)\n",
         "        nombre = random.choice(nombres)\n",
         "        edad = random.choice(edades)\n",
@@ -107,7 +123,7 @@
         "\n",
         "        alumno_aleatorio = crear_diccionario_alumno(matricula, nombre, appaterno, apmaterno, edad, sexo)\n",
         "        print(\"Datos del alumno creado\")\n",
-        "    elif opc == '2':\n",
+        "    elif es_numero == '2':\n",
         "        if 'alumno_aleatorio' in locals():\n",
         "            print(\"\\tDatos del alumno\")\n",
         "            print(\"\\n\")\n",
@@ -117,7 +133,7 @@
         "        else:\n",
         "            print(\"Aun no se ha creado el diccionario del alumno. Por favor, seleccione la opcion 1 primero.\")\n",
         "\n",
-        "    elif opc == '0':\n",
+        "    elif es_numero == '0':\n",
         "        print(\"Ha salido de la ejecucion.\")\n",
         "        break\n",
         "    else:\n",
@@ -128,7 +144,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y0vt2WaR23bB",
-        "outputId": "3a23de4a-2fd9-4d5d-db37-08435360a880"
+        "outputId": "72b619f2-1d97-43c1-dc1c-32cf793f6e5b"
       },
       "execution_count": null,
       "outputs": [
@@ -156,10 +172,10 @@
             "\tDatos del alumno\n",
             "\n",
             "\n",
-            "Matricula: 32415\n",
-            "Nombre: Isela\n",
-            "Apellido paterno: Perez\n",
-            "Apellido materno: Lopez\n",
+            "Matricula: 34005\n",
+            "Nombre: Andres\n",
+            "Apellido paterno: Dimas\n",
+            "Apellido materno: Rodriguez\n",
             "Edad: 21\n",
             "Sexo: Masculino\n",
             "\n",
@@ -182,21 +198,43 @@
             "\tDatos del alumno\n",
             "\n",
             "\n",
-            "Matricula: 36262\n",
+            "Matricula: 39496\n",
             "Nombre: Jesus\n",
-            "Apellido paterno: Dimas\n",
-            "Apellido materno: Rodriguez\n",
-            "Edad: 20\n",
+            "Apellido paterno: Perez\n",
+            "Apellido materno: Tello\n",
+            "Edad: 19\n",
             "Sexo: Femenino\n",
             "\n",
             "Digite una opcion\n",
             "1. Crear Diccionario\n",
             "2. Imprimir Diccionario\n",
             "0. Salir\n",
-            "Digite una opcion: 0\n",
+            "Digite una opcion: 1\n",
             "\n",
             "\n",
-            "Ha salido de la ejecucion.\n"
+            "Datos del alumno creado\n",
+            "\n",
+            "Digite una opcion\n",
+            "1. Crear Diccionario\n",
+            "2. Imprimir Diccionario\n",
+            "0. Salir\n",
+            "Digite una opcion: 2\n",
+            "\n",
+            "\n",
+            "\tDatos del alumno\n",
+            "\n",
+            "\n",
+            "Matricula: 34986\n",
+            "Nombre: Andres\n",
+            "Apellido paterno: Arenas\n",
+            "Apellido materno: Rodriguez\n",
+            "Edad: 20\n",
+            "Sexo: Masculino\n",
+            "\n",
+            "Digite una opcion\n",
+            "1. Crear Diccionario\n",
+            "2. Imprimir Diccionario\n",
+            "0. Salir\n"
           ]
         }
       ]
