--- a/Actidad_9.ipynb
+++ b/Actidad_9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkKia2EIMjzPuTjeMF8PFa",
+      "authorship_tag": "ABX9TyMzIUfb4ZZq5kfFH4zd+wTB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,17 +88,12 @@
         "id_alumno = random.randint(30000, 39999)\n",
         "nombre = random.choice(nombres)\n",
         "edad = random.choice(edades)\n",
-        "sexo = random.choice(sexos)\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "sexo = random.choice(sexos)"
       ],
       "metadata": {
         "id": "RBAwyR9tpYrj"
       },
-      "execution_count": null,
+      "execution_count": 151,
       "outputs": []
     },
     {
@@ -131,20 +126,20 @@
         "            for key, value in alumno_aleatorio.items():\n",
         "                print(f\"{key}: {value}\")\n",
         "        else:\n",
-        "            print(\"Aun no se ha creado el diccionario del alumno. Por favor, seleccione la opcion 1 primero.\")\n",
+        "          print(\"Aun no se ha creado el diccionario del alumno. Por favor, seleccione la opcion 1 primero.\")\n",
         "\n",
         "    elif es_numero == '0':\n",
         "        print(\"Ha salido de la ejecucion.\")\n",
         "        break\n",
         "    else:\n",
-        "        print(\"Opcion no valida, debe ser el número 1, 2 o 0\")\n"
+        "        print(\"Opcion no valida, debe ser el número 1, 2 o 0\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Y0vt2WaR23bB",
-        "outputId": "72b619f2-1d97-43c1-dc1c-32cf793f6e5b"
+        "id": "XVHXA898HsPu",
+        "outputId": "d6fa348e-1359-4318-ef8c-c6c7d32c3cac"
       },
       "execution_count": null,
       "outputs": [
@@ -172,11 +167,11 @@
             "\tDatos del alumno\n",
             "\n",
             "\n",
-            "Matricula: 34005\n",
-            "Nombre: Andres\n",
-            "Apellido paterno: Dimas\n",
-            "Apellido materno: Rodriguez\n",
-            "Edad: 21\n",
+            "Matricula: 32264\n",
+            "Nombre: Elena\n",
+            "Apellido paterno: Perez\n",
+            "Apellido materno: Tello\n",
+            "Edad: 19\n",
             "Sexo: Masculino\n",
             "\n",
             "Digite una opcion\n",
@@ -198,11 +193,11 @@
             "\tDatos del alumno\n",
             "\n",
             "\n",
-            "Matricula: 39496\n",
-            "Nombre: Jesus\n",
-            "Apellido paterno: Perez\n",
-            "Apellido materno: Tello\n",
-            "Edad: 19\n",
+            "Matricula: 31538\n",
+            "Nombre: Andres\n",
+            "Apellido paterno: Hernandez\n",
+            "Apellido materno: Lopez\n",
+            "Edad: 28\n",
             "Sexo: Femenino\n",
             "\n",
             "Digite una opcion\n",
@@ -224,12 +219,47 @@
             "\tDatos del alumno\n",
             "\n",
             "\n",
-            "Matricula: 34986\n",
-            "Nombre: Andres\n",
-            "Apellido paterno: Arenas\n",
-            "Apellido materno: Rodriguez\n",
+            "Matricula: 37102\n",
+            "Nombre: Jesus\n",
+            "Apellido paterno: Dimas\n",
+            "Apellido materno: Lopez\n",
             "Edad: 20\n",
-            "Sexo: Masculino\n",
+            "Sexo: Femenino\n",
+            "\n",
+            "Digite una opcion\n",
+            "1. Crear Diccionario\n",
+            "2. Imprimir Diccionario\n",
+            "0. Salir\n",
+            "Digite una opcion: a\n",
+            "\n",
+            "\n",
+            "Opcion no valida, debe ser el número 1, 2 o 0\n",
+            "\n",
+            "Digite una opcion\n",
+            "1. Crear Diccionario\n",
+            "2. Imprimir Diccionario\n",
+            "0. Salir\n",
+            "Digite una opcion: 1\n",
+            "\n",
+            "\n",
+            "Datos del alumno creado\n",
+            "\n",
+            "Digite una opcion\n",
+            "1. Crear Diccionario\n",
+            "2. Imprimir Diccionario\n",
+            "0. Salir\n",
+            "Digite una opcion: 2\n",
+            "\n",
+            "\n",
+            "\tDatos del alumno\n",
+            "\n",
+            "\n",
+            "Matricula: 37425\n",
+            "Nombre: Jesus\n",
+            "Apellido paterno: Perez\n",
+            "Apellido materno: Lopez\n",
+            "Edad: 19\n",
+            "Sexo: Femenino\n",
             "\n",
             "Digite una opcion\n",
             "1. Crear Diccionario\n",
